--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     background: black;
-    background-image: url('./assets/images/American_football_17-512.png');
+    background-image: url('Word-Guess-Game/assets/images/American_football_17-512.png');
     min-height: 600px;
 }
 
